--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.4.0",
     "axios": "^0.18.0",
-    "grommet": "https://github.com/grommet/grommet/tarball/NEXT-stable",
+    "grommet": "^1.10.1",
     "grommet-icons": "https://github.com/grommet/grommet-icons/tarball/stable",
+    "moment": "^2.22.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-places-autocomplete": "^6.1.3",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "styled-components": "^3.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
