--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "dependencies": {
     "ajv": "^6.4.0",
     "axios": "^0.18.0",
+    "bulma": "^0.7.0",
+    "bulma-start": "0.0.2",
     "grommet": "^1.10.1",
     "grommet-icons": "https://github.com/grommet/grommet-icons/tarball/stable",
     "moment": "^2.22.0",
+    "pure-react-carousel": "^1.11.1",
     "react": "^16.3.0",
+    "react-burger-menu": "^2.4.2",
     "react-dom": "^16.3.0",
     "react-places-autocomplete": "^6.1.3",
     "react-router-dom": "^4.2.2",
