--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-places-autocomplete": "^6.1.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-star-rating-component": "^1.4.1",
     "styled-components": "^3.2.5"
   },
   "scripts": {
