--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.3.0",
     "react-beautiful-dnd": "^7.0.1",
     "react-burger-menu": "^2.4.2",
+    "react-date-picker": "^6.10.1",
     "react-dom": "^16.3.0",
     "react-places-autocomplete": "^6.1.3",
     "react-router-dom": "^4.2.2",
